--- a/packages/addtions.org
+++ b/packages/addtions.org
@@ -1,77 +1,78 @@
-| TAG    | NAME IN REPO (or git url)    | PURPOSE (should be a verb phrase to sound right while installing)                              |
-|--------+------------------------------+------------------------------------------------------------------------------------------------|
-| pacman | nodejs                       | node.js is needed to run some programs ahead                                                   |
-| pacman | npm                          | node.js pacage manager                                                                         |
-| pacman | python-pip                   | python's package manager                                                                       |
-| pacman | python2-pip                  | python2 pip                                                                                    |
-| pip    | youtube-dl                   | can download any YouTube video (or playlist or channel) when given the link                    |
-| pip2   | BeautifulSoup                | beautiful soup for python2.7                                                                   |
-| pacman | youtube-viewer               | is a terminal interface for watching YouTube videos without a browser                          |
-| pacman | zathura                      | is a pdf viewer with vim-like bindings                                                         |
-| pacman | zathura-djvu                 | gives zathura the ability to read .djvu files                                                  |
-| pacman | zathura-pdf-mupdf            | allows mupdf pdf compatibility in zathura                                                      |
-| pacman | firefox                      | chromium is good but firefox is not bad                                                        |
-| pacman | newsboat                     | is a terminal RSS client                                                                       |
-| pacman | libreoffice                  | because off course someone will send a file that is not a plain text...                        |
-| pacman | jdk8-openjdk                 | Java 8 development kit                                                                         |
-| pacman | firejail                     | keeps untrusted software in jail                                                               |
-| pacman | net-tools                    | some handy networking tools                                                                    |
-| pacman | traceroute                   | trace the route to the host                                                                    |
-| pacman | arch-install-scripts         | contains some helpful scripts to install or maintain arch                                      |
-| pacman | gimp                         | the gnu image manipulation program                                                             |
-| aur    | drawio-desktop-bin           | diagram builder                                                                                |
-| pacman | imagemagick                  | the magical image editor                                                                       |
-| aur    | paper-icon-theme             | a nicer GTK icon theme                                                                         |
-| pacman | cmus                         | the little simple music player                                                                 |
-| pacman | virtual-box                  | the chosen virtual machine                                                                     |
-| pacman | virtualbox-host-modules-arch | virtual-box kernel modules                                                                     |
-| pacman | colordiff                    | a more colorful diff                                                                           |
-| pacman | wdiff                        | diff but for words                                                                             |
-| pacman | nautilus                     | GNOME's file manager                                                                           |
-| pacman | evince                       | GNOME's reader                                                                                 |
-| pacman | wine                         | runs Windows programs. Always be careful while using non free software. Best fit with firejail |
-| pacman | wine-mono                    | needed by wine                                                                                 |
-| pacman | wine_gecko                   | needed by wine                                                                                 |
-| pacman | libwbclient                  | needed for wine                                                                                |
-| pacman | samba                        | needed for wine                                                                                |
-| pacman | mpg123                       | needed for wine                                                                                |
-| pacman | lib32-mpg123                 | needed for wine                                                                                |
-| pacman | lib32-gnutls                 | needed for wine                                                                                |
-| pacman | alsa-firmware                | sound related stuff                                                                            |
-| pacman | alsa-lib                     | sound related stuff                                                                            |
-| pacman | alsa-plugins                 | sound related stuff                                                                            |
-| pacman | alsa-utils                   | sound related stuff                                                                            |
-| pacman | lib32-alsa-lib               | sound related stuff                                                                            |
-| pacman | lib32-alsa-plugins           | sound related stuff                                                                            |
-| pacman | pulseaudio-alsa              | sound related stuff                                                                            |
-| pacman | lib32-libpulse               | sound related stuff                                                                            |
-| pacman | libcanberra-pulse            | sound related stuff                                                                            |
-| pacman | libpulse                     | sound related stuff                                                                            |
-| pacman | pulseaudio                   | sound related stuff                                                                            |
-| pacman | lib32-openal                 | sound related stuff                                                                            |
-| pacman | ttf-hanazono                 | Chinese font                                                                                   |
-| pacman | opendesktop-fonts            | Japanese font                                                                                  |
-| aur    | adwaita-qt5                  | Adwaita GNOME theme for Qt5                                                                    |
-| aur    | adwaita-qt4                  | Adwaita GNOME theme for Qt4                                                                    |
-| pacman | transset-df                  | used to change the window opacity                                                              |
-| pacman | translate-shell              | a command-line translator                                                                      |
-| pip    | numpy                        | some actual math in python                                                                     |
-| pip    | matplotlib                   | math plotting in python                                                                        |
-| pacman | python-pmw                   | needed for matplotlib                                                                          |
-| pacman | texlive-most                 | tex stuff                                                                                      |
-| pacman | texlive-langextra            | tex extra languages support                                                                    |
-| pacman | biber                        | tex biber                                                                                      |
-| aur    | screenkey                    | display the pressed keys on the screen. Useful for screen casting                              |
-| pacman | tree                         | list tree of directories                                                                       |
-| pacman | gnuplot                      | Gnu plotting program                                                                           |
-| pacman | lsof                         | list open files                                                                                |
-| pacman | wireshark-gtk                | Interactively dump and analyze network traffic                                                 |
-| pacman | tcpdump                      | dump network traffic                                                                           |
-| pacman | iotop                        | top for disk io                                                                                |
-| pacman | sysstat                      | a collection of performance monitoring tools (iostat,isag,mpstat,pidstat,sadf,sar)             |
-| pacman | ditta                        | draw with ASCII                                                                                |
-| npm    | cloudconvert                 | usefull to convert ugly documents written in non-free softwares                                |
-| pacman | mlocate                      | find files quickly                                                                             |
-| npm    | wikit                        | cli wikipedia                                                                                  |
-| pacman | perl-file-mimeinfo           | file opener with mime type                                                                     |
-| pacman | onboard                      | on-screen keyboard                                                                             |
+| TAG    | NAME IN REPO (or git url)             | PURPOSE (should be a verb phrase to sound right while installing)                              |
+|--------+---------------------------------------+------------------------------------------------------------------------------------------------|
+| pacman | nodejs                                | node.js is needed to run some programs ahead                                                   |
+| pacman | npm                                   | node.js pacage manager                                                                         |
+| pacman | python-pip                            | python's package manager                                                                       |
+| pacman | python2-pip                           | python2 pip                                                                                    |
+| pip    | youtube-dl                            | can download any YouTube video (or playlist or channel) when given the link                    |
+| pip2   | BeautifulSoup                         | beautiful soup for python2.7                                                                   |
+| pacman | youtube-viewer                        | is a terminal interface for watching YouTube videos without a browser                          |
+| pacman | zathura                               | is a pdf viewer with vim-like bindings                                                         |
+| pacman | zathura-djvu                          | gives zathura the ability to read .djvu files                                                  |
+| pacman | zathura-pdf-mupdf                     | allows mupdf pdf compatibility in zathura                                                      |
+| pacman | firefox                               | chromium is good but firefox is not bad                                                        |
+| pacman | newsboat                              | is a terminal RSS client                                                                       |
+| pacman | libreoffice                           | because off course someone will send a file that is not a plain text...                        |
+| pacman | jdk8-openjdk                          | Java 8 development kit                                                                         |
+| pacman | firejail                              | keeps untrusted software in jail                                                               |
+| pacman | net-tools                             | some handy networking tools                                                                    |
+| pacman | traceroute                            | trace the route to the host                                                                    |
+| pacman | arch-install-scripts                  | contains some helpful scripts to install or maintain arch                                      |
+| pacman | gimp                                  | the gnu image manipulation program                                                             |
+| aur    | drawio-desktop-bin                    | diagram builder                                                                                |
+| pacman | imagemagick                           | the magical image editor                                                                       |
+| aur    | paper-icon-theme                      | a nicer GTK icon theme                                                                         |
+| pacman | cmus                                  | the little simple music player                                                                 |
+| pacman | virtual-box                           | the chosen virtual machine                                                                     |
+| pacman | virtualbox-host-modules-arch          | virtual-box kernel modules                                                                     |
+| pacman | colordiff                             | a more colorful diff                                                                           |
+| pacman | wdiff                                 | diff but for words                                                                             |
+| pacman | nautilus                              | GNOME's file manager                                                                           |
+| pacman | evince                                | GNOME's reader                                                                                 |
+| pacman | wine                                  | runs Windows programs. Always be careful while using non free software. Best fit with firejail |
+| pacman | wine-mono                             | needed by wine                                                                                 |
+| pacman | wine_gecko                            | needed by wine                                                                                 |
+| pacman | libwbclient                           | needed for wine                                                                                |
+| pacman | samba                                 | needed for wine                                                                                |
+| pacman | mpg123                                | needed for wine                                                                                |
+| pacman | lib32-mpg123                          | needed for wine                                                                                |
+| pacman | lib32-gnutls                          | needed for wine                                                                                |
+| pacman | alsa-firmware                         | sound related stuff                                                                            |
+| pacman | alsa-lib                              | sound related stuff                                                                            |
+| pacman | alsa-plugins                          | sound related stuff                                                                            |
+| pacman | alsa-utils                            | sound related stuff                                                                            |
+| pacman | lib32-alsa-lib                        | sound related stuff                                                                            |
+| pacman | lib32-alsa-plugins                    | sound related stuff                                                                            |
+| pacman | pulseaudio-alsa                       | sound related stuff                                                                            |
+| pacman | lib32-libpulse                        | sound related stuff                                                                            |
+| pacman | libcanberra-pulse                     | sound related stuff                                                                            |
+| pacman | libpulse                              | sound related stuff                                                                            |
+| pacman | pulseaudio                            | sound related stuff                                                                            |
+| pacman | lib32-openal                          | sound related stuff                                                                            |
+| pacman | ttf-hanazono                          | Chinese font                                                                                   |
+| pacman | opendesktop-fonts                     | Japanese font                                                                                  |
+| aur    | adwaita-qt5                           | Adwaita GNOME theme for Qt5                                                                    |
+| aur    | adwaita-qt4                           | Adwaita GNOME theme for Qt4                                                                    |
+| pacman | transset-df                           | used to change the window opacity                                                              |
+| pacman | translate-shell                       | a command-line translator                                                                      |
+| pip    | numpy                                 | some actual math in python                                                                     |
+| pip    | matplotlib                            | math plotting in python                                                                        |
+| pacman | python-pmw                            | needed for matplotlib                                                                          |
+| pacman | texlive-most                          | tex stuff                                                                                      |
+| pacman | texlive-langextra                     | tex extra languages support                                                                    |
+| pacman | biber                                 | tex biber                                                                                      |
+| aur    | screenkey                             | display the pressed keys on the screen. Useful for screen casting                              |
+| pacman | tree                                  | list tree of directories                                                                       |
+| pacman | gnuplot                               | Gnu plotting program                                                                           |
+| pacman | lsof                                  | list open files                                                                                |
+| pacman | wireshark-gtk                         | Interactively dump and analyze network traffic                                                 |
+| pacman | tcpdump                               | dump network traffic                                                                           |
+| pacman | iotop                                 | top for disk io                                                                                |
+| pacman | sysstat                               | a collection of performance monitoring tools (iostat,isag,mpstat,pidstat,sadf,sar)             |
+| pacman | ditta                                 | draw with ASCII                                                                                |
+| npm    | cloudconvert                          | usefull to convert ugly documents written in non-free softwares                                |
+| pacman | mlocate                               | find files quickly                                                                             |
+| npm    | wikit                                 | cli wikipedia                                                                                  |
+| pacman | perl-file-mimeinfo                    | file opener with mime type                                                                     |
+| pacman | onboard                               | on-screen keyboard                                                                             |
+| git    | https://github.com/ym1234/colorpicker | a simple color picker                                                                          |
